--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:targetSdkVersion="8" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -35,12 +39,12 @@
             android:enabled="true"
             android:exported="true" >
         </service>
-
-        <receiver
-            android:name="edu.ucla.cens.audiosens.BootBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true" >
-        </receiver>
+        
+        <receiver android:name="edu.ucla.cens.audiosens.BootBroadcastReceiver">
+    		<intent-filter >
+        		<action android:name="android.intent.action.BOOT_COMPLETED"/>
+    		</intent-filter>
+		</receiver>
     </application>
 
 </manifest>
