--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="8" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -39,12 +41,17 @@
             android:enabled="true"
             android:exported="true" >
         </service>
-        
-        <receiver android:name="edu.ucla.cens.audiosens.BootBroadcastReceiver">
-    		<intent-filter >
-        		<action android:name="android.intent.action.BOOT_COMPLETED"/>
-    		</intent-filter>
-		</receiver>
+
+        <receiver android:name="edu.ucla.cens.audiosens.BootBroadcastReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="edu.ucla.cens.audiosens.AudioSensTimeSettingsActivity"
+            android:label="@string/title_activity_audio_sens_time_settings" >
+        </activity>
     </application>
 
 </manifest>
